# crosstext

./: .gitignore  CMakeLists.txt  CrossText.cpp  CrossText.hpp  DirectWrite.hpp  FreeType.cpp  FreeType.hpp  LibPngWriter.hpp  OpenGlWriter.hpp
crosstext/: Common.hpp  CrossText.cpp  CrossText.hpp  DirectWrite.cpp  DirectWrite.hpp  crosstext.sln  crosstext.vcxproj  crosstext.vcxproj.filters
include/: Common.hpp  CrossText.hpp  DirectWrite.hpp  FreeType.hpp  LibPngWriter.hpp
sandbox/fttest/: go.sh  test  test.cpp
src/: CrossText.cpp  DirectWrite.cpp  FreeType.cpp  crosstext.sln  ctlib.vcxproj  ctlib.vcxproj.filters
src/ctlib/: Common.hpp  CrossText.cpp  CrossText.hpp  DirectWrite.cpp  DirectWrite.hpp  ReadMe.txt  ctlib.vcxproj
src/cttest/: ReadMe.txt  cttest.cpp  cttest.vcxproj  cttest.vcxproj.filters
test/directwrite/: cttest.cpp  cttest.vcxproj  stdafx.cpp
test/freetype/: fttest.cpp
test/unit/: UnitTests.cpp
